fix: adjust z-index values for improved layering feat: add base styles for traceStack component

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ h2 {
       hsl(0, 0%, 87%));
   box-shadow: inset hsla(0, 0%, 100%, 0.5) 0 1px 1px;
   border-bottom: 1px solid #cacaca;
-  z-index: 9999;
+  z-index: 9991;
   vertical-align: baseline;
 }
 
@@ -230,7 +230,7 @@ ul.tabs {
   background-color: #fafafa;
   /* border-right: 1px solid #cacaca; */
   box-shadow: 0px 0px 3px rgba(101, 101, 101, 0.5);
-  z-index: 9998;
+  z-index: 999;
 }
 
 #infotitle {
